--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -24,6 +24,8 @@
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-google-tagmanager": "^5.13.1",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-sanity": "^6.0.4",
     "isomorphic-fetch": "^2.2.1",
