--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -42,6 +42,8 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.8.1",
