--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -36,6 +36,7 @@
     "react-helmet": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
+    "smtpexpress": "^0.0.14",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
